--- a/config.yaml
+++ b/config.yaml
@@ -9,4 +9,11 @@ cirq-qvm:
   repetitions : 1000
   noise_model: "default" # or custom. If custom will need to update the QVM with this prior to running a circuit
   device: "default" # same as noise_model
+
+qiskit-qvm:
+  noise_on: False
+  repetitions : 1000
+  noise_model: "default" # or custom. If custom will need to update the QVM with this prior to running a circuit
+  backend_name: "default" # same as noise_model
+
 IBM-Q:
