--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,4 @@
 ---
-# Tells the system what backend to run on. Either 'cirq-qvm' or 'IBM-Q'
-backend: 'cirq-qvm'
-
 # Settings for the cirq qvm
 cirq-qvm:
   processor_id: "weber" # weber or rainbow
@@ -9,11 +6,13 @@ cirq-qvm:
   repetitions : 1000
   noise_model: "default" # or custom. If custom will need to update the QVM with this prior to running a circuit
   device: "default" # same as noise_model
-
+# Settings for the qiskit-qvm
 qiskit-qvm:
   noise_on: False
   repetitions : 1000
   noise_model: "default" # or custom. If custom will need to update the QVM with this prior to running a circuit
   backend_name: "default" # same as noise_model
-
+# Settings for IBM-Q Interface
 IBM-Q:
+  backend_name: "ibm-brisbane"
+  optimisation_lvl: 1
