--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ numpy
 window-curses ; platform_system == 'Windows'
 pydantic>=2.5.0
 
-## TODO: Sort out dependency problem with pydantic 2.5.0 for qiskit and smaller than 2.0.0 for cirq.
+## Sort out dependency problem with pydantic 2.5.0 for qiskit and smaller than 2.0.0 for cirq.
