--- a/job_ids.yaml
+++ b/job_ids.yaml
@@ -1,7 +1,32 @@
+---
 crjhp3gwverg008w0n60: 
   Eigenstate/Energy Level: '1 '
   Number of time steps: '1 '
   Optimised(y/n): 'n '
-  Size of Box: '4 ', 
+  Size of Box: '4 ' 
   Time Step Size: '0.1 '
-  date: '21/04/2024 14:56:30'
+  date: '21/04/2024 14:56'
+
+crftgha7fdh0008f92t0: 
+  Eigenstate/Energy Level: '1 '
+  Number of time steps: '1 '
+  Optimised(y/n): 'n '
+  Size of Box: '32 ' 
+  Time Step Size: '0.1 '
+  date: '17/04/2024 10:03'
+
+crftfnyd7s5g008xx5ng: 
+  Eigenstate/Energy Level: '1 '
+  Number of time steps: '5 '
+  Optimised(y/n): 'n '
+  Size of Box: '32 ' 
+  Time Step Size: '0.1 '
+  date: '17/04/2024 10:05'
+
+crft3w7qzd5000885sh0: 
+  Eigenstate/Energy Level: '1 '
+  Number of time steps: '10 '
+  Optimised(y/n): 'n '
+  Size of Box: '32 ' 
+  Time Step Size: '0.1 '
+  date: '17/04/2024 10:06'
