--- a/job_ids.yaml
+++ b/job_ids.yaml
@@ -1,12 +1,4 @@
 ---
-crjhp3gwverg008w0n60: 
-  Eigenstate/Energy Level: '1 '
-  Number of time steps: '1 '
-  Optimised(y/n): 'n '
-  Size of Box: '4 ' 
-  Time Step Size: '0.1 '
-  date: '21/04/2024 14:56'
-
 crftgha7fdh0008f92t0: 
   Eigenstate/Energy Level: '1 '
   Number of time steps: '1 '
@@ -14,6 +6,7 @@ crftgha7fdh0008f92t0:
   Size of Box: '32 ' 
   Time Step Size: '0.1 '
   date: '17/04/2024 10:03'
+  backend: 'ibm_brisbane'
 
 crftfnyd7s5g008xx5ng: 
   Eigenstate/Energy Level: '1 '
@@ -22,6 +15,7 @@ crftfnyd7s5g008xx5ng:
   Size of Box: '32 ' 
   Time Step Size: '0.1 '
   date: '17/04/2024 10:05'
+  backend: 'ibm_brisbane'
 
 crft3w7qzd5000885sh0: 
   Eigenstate/Energy Level: '1 '
@@ -30,3 +24,31 @@ crft3w7qzd5000885sh0:
   Size of Box: '32 ' 
   Time Step Size: '0.1 '
   date: '17/04/2024 10:06'
+  backend: 'ibm_brisbane'
+
+crkpdzqakhw0008ewzm0: 
+  Eigenstate/Energy Level: '1 '
+  Number of time steps: '1 '
+  Optimised(y/n): 'n '
+  Size of Box: '32 ' 
+  Time Step Size: '0.1 '
+  date: '23/04/2024 8:56'
+  backend: 'ibm_sherbrooke'
+
+crkpfjpakhw0008ewzqg: 
+  Eigenstate/Energy Level: '1 '
+  Number of time steps: '5 '
+  Optimised(y/n): 'n '
+  Size of Box: '32 ' 
+  Time Step Size: '0.1 '
+  date: '23/04/2024 8:59'
+  backend: 'ibm_sherbrooke'
+
+crkpgvkakhw0008ewztg: 
+  Eigenstate/Energy Level: '1 '
+  Number of time steps: '10 '
+  Optimised(y/n): 'n '
+  Size of Box: '32 ' 
+  Time Step Size: '0.1 '
+  date: '23/04/2024 9:03'
+  backend: 'ibm_sherbrooke'
